--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>افزودن کارمند</title>
+    <title>جست و جو</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" href="assets/images/favicon.png">
@@ -42,7 +42,7 @@
                 <div class="container">
                     <div class="header-bottominner">
                         <div class="header-logo">
-                            <h1 class="header1">افزودن کارمند</h1>
+                            <h1 class="header1">جست و جو</h1>
                         </div>
                         <nav class="tm-navigation">
                             <ul>
@@ -72,27 +72,9 @@
                 <div class="container">
                     <div class="row">
                         <form action="#">
-
-                            <label for="name">نام</label>
-                            <input type="text" id="name" name="name">
-
-                            <label for="last_name">نام خانوادگی</label>
-                            <input type="text" id="last_name" name="last_name">
-
-                            <label for="p-number">شماره پرسنلی</label>
-                            <input type="text" id="p-number" name="p-number">
-
-                            <label for="m-number">کد ملی</label>
-                            <input type="text" id="m-number" name="m-number">
-
-                            <label for="work-type">دسته کاری</label>
-                            <select name="work-type" id="work-type">
-                                <option value="دسته کاری اول">دسته کاری اول</option>
-                                <option value="دسته کاری دوم">دسته کاری دوم</option>
-                                <option value="دسته کاری سوم">دسته کاری سوم</option>
-                                <option value="دسته کاری چهارم">دسته کاری چهارم</option>
-                            </select>
-                            <input class="btn btn-primary rounded mt-4" type="submit" value="ثبت">
+                            <label for="search">جست و جو</label>
+                            <input type="text" id="search" placeholder="جست و جو" name="search">
+                            <input class="btn btn-primary" type="submit" value="جست و جو">
                         </form>
                     </div>
                 </div>
