--- a/table.html
+++ b/table.html
@@ -48,6 +48,7 @@
                             <ul>
                                 <li><a href="table.html">ساعات کاری</a></li>
                                 <li><a href="form.html">افزودن کارمند</a></li>
+                                <li><a href="search.html">جست و جو</a></li>
                             </ul>
                         </nav>
                     </div>
