Implement form validation

--- a/form.html
+++ b/form.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <link rel="stylesheet" href="assets/css/custom.css">
+    <script src="assets/js/validate-form.js"></script>
 </head>
 
 <body>
@@ -92,9 +93,9 @@
                                 <option value="دسته کاری سوم">دسته کاری سوم</option>
                                 <option value="دسته کاری چهارم">دسته کاری چهارم</option>
                             </select>
-                            <input class="btn btn-primary rounded mt-4" type="submit" value="ثبت">
                         </form>
                     </div>
+                    <button class="btn btn-primary rounded mt-4" type="submit" onclick="validate()">ثبت</button>
                 </div>
             </div>
             <!--// Blogs Area -->
